# MidnightMuseum

./: .gitignore  README.md
Projet/: CMakeLists.txt  README_GLAD.md  README_MUSEUM.md  README_ROOMS.md  build_run.bat  main.cpp
Projet/include/: Application.hpp  Camera.hpp  Hallway.hpp  MuseumScene.hpp  ResourceManager.hpp  Room1.hpp  Room2.hpp
Projet/include/glad/: glad.h
Projet/model/: bones.mtl  cabinet2.glb  effigy.glb  fbxload.hpp  flashlight.glb  glass_showcase.glb  head.glb  monster__sekireinel__totem_kings_raid.glb  museum.mtl  objload.cpp  objload.hpp  paint.glb  painting2.glb  pyramid_figure_decoration.glb  rope_barrier.glb  seated_statue_of_amenhotep_iii.glb  skirtingboard.glb  small_fossil1.glb  stela_of_ima_from.glb  the_bust_of_pharaoh_tutankhamun.glb  wall_lamp.glb
Projet/shader/: uv_debug.frag
Projet/shader/shader/: SimpleFragmentShader.fragmentshader  SimpleVertexShader.vertexshader
Projet/src/: Application.cpp  Hallway.cpp  MuseumScene.cpp  ResourceManager.cpp  Room1.cpp  Room2.cpp  fbxload.cpp  glad.c
Projet/textures/tiles/: tiles_0099_description.txt  tiles_0099_keywords.txt
libs/assimp-6.0.3/: build_assimp.bat
libs/mingw64/winlibs-x86_64-posix-seh-gcc-15.2.0-mingw-w64ucrt-13.0.0-r2/mingw64/: version_info.txt
libs/mingw64/winlibs-x86_64-posix-seh-gcc-15.2.0-mingw-w64ucrt-13.0.0-r2/mingw64/lib/gcc/x86_64-w64-mingw32/15.2.0/plugin/include/: version.h
